--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <h2>About</h2>
         <p>Hello! 
           My name is Sanjana Kumari. I belong to muz(Bihar).
-          I have pursuing my Bachelor degree in computer science from Dr.K.N. Modi university (Rajasthan).
+          I have pursuing my Bachelor degree in Computer Application from Dr.K.N. Modi university (Rajasthan).
           I am Final Year Student.
         </p>
       </div><!-- End Section Title -->
@@ -275,7 +275,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
         <p>My name is Sanjana Kumari. I belong to muz(Bihar).
-          I have pursuing my Bachelor degree in computer science from Dr.K.N. Modi university (Rajasthan).
+          I have pursuing my Bachelor degree in Computer Application from Dr.K.N. Modi university (Rajasthan).
           I am Final Year Student.</p>
       </div><!-- End Section Title -->
 
@@ -288,7 +288,7 @@
 
             <div class="resume-item pb-0">
               <h4></h4>
-              <p><em>I have pursuing my Bachelor degree in computer science from De.K.N. Modi university. proficient in (revelent skills, e.g., programming language
+              <p><em>I have pursuing my Bachelor degree in Computer Application from Dr.K.N. Modi university. proficient in (revelent skills, e.g., programming language
                 such as C, C++, Python, Html, CSS, Bootstrap,) with hand on experience.
                </em></p>
               <ul>
