--- a/index.html
+++ b/index.html
@@ -303,18 +303,18 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor of Computer Science (BCA)</h4>
+              <h4>Bachelor of Computer Application (BCA)</h4>
               <p><em>Dr.K.N.Modi University</em></p>
               <h5>2022- 2025</h5>
               
               <p></p>
             </div><!-- Edn Resume Item -->
 
-            <h3 class="resume-title"> SeniorEducation (12th)</h3>
+            <h3 class="resume-title"> Senior Education (12th)</h3>
             <div class="resume-item">
               <h4>R.S collage muzaffarpur(Bihar)  </h4>
               
-              <p><em> I have completed my collage in Commerce (Account,Business Studies, EPS) with good marks.</em></p>
+              <p><em> I have completed my higher secondary in Commerce (Account,Business Studies, EPS) with good marks.</em></p>
               <p></p>
             </div><!-- Edn Resume Item -->
 
